--- a/src/styles.css
+++ b/src/styles.css
@@ -9,3 +9,71 @@ html, body{
   height: 100vh;
   font-family: 'Nunito Sans', sans-serif;
 }
+
+input, button{
+  font-family: 'Nunito Sans', sans-serif;
+}
+
+body{
+  background-image: url("./assets/images/storm.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.App .App-header{
+  width: 100%;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+
+  color: white;
+}
+
+.App .App-header form{
+  width: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.App .App-header form input{
+  flex: 2;
+  border: none;
+  padding: 5px;
+  border-radius: 5px 0 0 5px;
+  outline: 0;
+}
+
+.App .App-header form button{
+  flex: 1;
+  border: none;
+  padding: 5px;
+  border-radius: 0 5px 5px 0;
+  background-color: rgb(0, 89, 255);
+  color: white;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+main{
+  width: 250px;
+  height: 250px;
+  color: white;
+  margin: 100px auto;
+
+  background-color: rgba(0, 0, 0, 0.45);
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 30px;
+}
+
+main .container{
+  padding: 10px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: center;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25);
+}
