--- a/src/styles.css
+++ b/src/styles.css
@@ -15,13 +15,11 @@ input, button{
   outline: 0;
 }
 
-body{
-  background-image: url("./assets/images/default.jpg");
+.App{
+  height: 100vh;
+  
   background-repeat: no-repeat;
   background-size: cover;
-}
-
-.App{
   text-align: center;
   color: white;
 }
